# mockchain

./: Cargo.toml  README.md  build.rs
proto/: blockchain.proto
src/: block.rs  main.rs  rpc.rs  transaction.rs
src/consensus/: mod.rs  pos.rs  pow.rs
