[package]
name = "mockchain"
version = "0.1.0"
edition = "2021"
authors = ["Sourav Mishra <sourav.m.bt@example.com>"]
description = "A mock blockchain implementation with pluggable consensus mechanisms"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tonic = "0.10"
prost = "0.12"
chrono = { version = "0.4", features = ["serde"] }
secp256k1 = { version = "0.27", features = ["rand"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
log = "0.4"
env_logger = "0.10"
rand = "0.8"

[build-dependencies]
tonic-build = "0.10"